--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
     min-height: 100vh;
     display: grid;
     grid-template-columns: 20vw 1fr 20vw;
-    grid-template-rows: 10vh 45vh 1fr 40vh;
+    grid-template-rows: 10vh 45vh 3fr 300px;
     grid-template-areas: 
     "nav nav nav"
     "featured featured featured"
@@ -21,8 +21,10 @@
 .nav {
     grid-area: nav;
     display: flex;
-
     background-color: black;
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
 
 .griot {
@@ -47,7 +49,7 @@
 }
 
 .nav-links a {
-    font-size: x-small;
+    font-size: small;
 }
 
 .nav-links > a:hover {
@@ -67,6 +69,11 @@
     align-items: center;
     justify-content: center;
     display: flex;
+    box-shadow: 0 5px 10px rgb(0, 0, 0);
+}
+
+.featured h1 {
+    filter: drop-shadow(0 0 2mm rgb(0, 0, 0));
 }
 
 .show-cards {
@@ -110,7 +117,6 @@
 .showbutton{
     display: flex;
     width: 25%;
-   
     align-items: center;
     justify-content: right;
 }
@@ -136,18 +142,21 @@ button:hover {
     padding: 50px;
     background-color: black;
     color: white;
+    font-family: 'Arial Narrow', Arial, sans-serif;
     justify-content: space-around;
     align-items: center;
 }
 
 .mapcontainer {
+    display: flex;
     height: 100%;
     width: 40%;
-   
+    justify-content: center;
 }
 
 .footmap {
-    width: 50%;
+    width: auto;
+    height: auto;
 }
 
 .footinfo {
