--- a/css/main.css
+++ b/css/main.css
@@ -166,3 +166,12 @@ button:hover {
     width: 20%;
     justify-content: space-between;
 }
+
+.footinfo .bi {
+    color: goldenrod;
+    font-size: 1.5em;
+}
+
+.footinfo h6 {
+    font-weight: 300;
+}
